19_Ingress_Nginx/BareMetal/02_Ingress_DefaulBackEnd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx #Vinculando o Nginx Ingress Controller
  rules:
  - http:
      paths: # São duas regras de redirecionamento diferentes Blue e Green
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: web-green
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
